--- a/web/index.html
+++ b/web/index.html
@@ -1,38 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
+  <head>
+    <meta charset="UTF-8" />
+    <title>Info Kedinasan AI</title>
 
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
+    <script type="module">
+      import { GoogleGenerativeAI } from "https://esm.run/@google/generative-ai";
 
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+      // PERBAIKAN: API Key harus diapit tanda kutip " "
+      const genAI = new GoogleGenerativeAI("AIzaSyCB6IAsQ7X66U_-BtcL6AbiziFnX1TGReI");
 
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
-  <base href="$FLUTTER_BASE_HREF">
+      window.sendToGemini = async function (text) {
+        try {
+          // Model gemini-1.5-flash sudah benar
+          const model = genAI.getGenerativeModel({ model: "gemini-1.5-flash" });
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+          const prompt =
+            "Anda adalah pakar sekolah kedinasan Indonesia. Jawab dengan jelas:\n" +
+            text;
 
-  <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="flutter_application_1">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+          const result = await model.generateContent(prompt);
+          const response = await result.response;
+          return response.text();
+        } catch (e) {
+          // Akan menampilkan pesan error ke UI jika gagal
+          return "❌ Error API: " + e.message;
+        }
+      };
+    </script>
+  </head>
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
-
-  <title>flutter_application_1</title>
-  <link rel="manifest" href="manifest.json">
-</head>
-<body>
-  <script src="flutter_bootstrap.js" async></script>
-</body>
+  <body>
+    <script src="flutter_bootstrap.js" async></script>
+  </body>
 </html>
